# spotify-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKER_HUB_OVERVIEW.md  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  auth_init.py  config.py  mcp_server.py  pyproject.toml  requirements.txt  spotify_tools.py
.cursor/rules/: mcp-usage.mdc  project-structure.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/scripts/: create-labels.sh
.github/workflows/: cd.yml  ci.yml  docker.yml  release-drafter.yml  release.yml
src/spotify_mcp/: __init__.py  __version__.py  config.py  py.typed  server.py  tools.py
src/spotify_mcp/cli/: __init__.py  auth_init.py  main.py
src/spotify_mcp/utils/: __init__.py
tests/: __init__.py  conftest.py  test_server.py  test_structure.py  test_tools.py
